--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,7 +1,5 @@
 name: Pylint
-
 on: [push]
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,6 +16,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+    - name: Create Pylint configuration
+      run: |
+        echo "[MASTER]" > .pylintrc
+        echo "ignore-patterns=.*[가-힣].*\.py" >> .pylintrc
+        echo "file-encoding=utf-8" >> .pylintrc
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint --rcfile=.pylintrc $(git ls-files '*.py')
